--- a/.env
+++ b/.env
@@ -30,5 +30,5 @@ APP_SECRET=2ad95f8d085ea256fe71d78339b9026b
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/symfony_test?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/b2symfony?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
